--- a/nginx/nginx.conf.tmpl
+++ b/nginx/nginx.conf.tmpl
@@ -1,6 +1,6 @@
 map $http_x_v3io_session_key $v3io_session_key {
-    default   $http_x_v3io_session_key;
-    ""        ${MLRUN_V3IO_ACCESS_KEY};
+  default $http_x_v3io_session_key;
+  ""      "${MLRUN_V3IO_ACCESS_KEY}";
 }
 
 server {
@@ -20,10 +20,28 @@ server {
     rewrite ^/mlrun(/|$)(.*) /$2 last;
   }
 
+  # -------------------------------
+  # Serve Static Frontend + CORS preflight handling
+  # -------------------------------
   location / {
+    if ($request_method = 'OPTIONS') {
+      # CORS: Allowed origin from env
+      add_header 'Access-Control-Allow-Origin' '${MLRUN_IGZ_UI_ALLOWED_ORIGIN}';
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+      add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+      add_header 'Content-Length' 0;
+      add_header 'Content-Type' 'text/plain';
+      return 204;
+    }
+
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
+
+    # CORS: Allowed origin from env
+    add_header 'Access-Control-Allow-Origin' '${MLRUN_IGZ_UI_ALLOWED_ORIGIN}' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
   }
 
   set $backend ${MLRUN_API_PROXY_URL};
@@ -43,5 +61,4 @@ server {
   location = /50x.html {
     root   /usr/share/nginx/html;
   }
-
 }
