Fix [Alerts] '!' icon is missing on the Alerts tab

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -557,3 +557,16 @@ div[id^='chartjs-tooltip'] {
 .override-artifact-dialog {
   z-index: 10;
 }
+
+/* =========== ICONS ============= */
+
+.table-severity-warning-icon {
+  svg {
+    width: 32px;
+    height: 32px;
+
+    path {
+      fill: colors.$supernova;
+    }
+  }
+}
