--- a/src/elements/PageHeader/pageHeader.scss
+++ b/src/elements/PageHeader/pageHeader.scss
@@ -18,9 +18,25 @@
   }
 
   &__title {
+    display: flex;
     color: variables.$primaryTextColor;
     font-weight: 300;
     font-size: 40px;
+
+    .tooltip-wrapper {
+      display: flex;
+      align-items: center;
+      margin-left: 10px;
+
+      svg {
+        width: 20px;
+        height: 20px;
+
+        path {
+          fill: variables.$secondaryTextColor;
+        }
+      }
+    }
   }
 
   &__description {
