--- a/src/components/Project/project.scss
+++ b/src/components/Project/project.scss
@@ -150,7 +150,7 @@
           justify-content: space-between;
           margin-bottom: 16px;
           color: colors.$primary;
-          font-size: 1.25em;
+          font-size: 1em;
           font-weight: 500;
           line-height: 23px;
         }
@@ -160,6 +160,7 @@
           align-items: center;
           color: colors.$topaz;
           font-size: 12px;
+          font-weight: 400;
 
           &-icon {
             flex: 0 1 12px;
