--- a/src/common/StatsCard/statsCard.scss
+++ b/src/common/StatsCard/statsCard.scss
@@ -23,6 +23,7 @@
       flex-flow: row nowrap;
       align-items: baseline;
       justify-content: space-between;
+      font-size: 12px;
 
       &:not(:last-child) {
         margin-bottom: 1em;
@@ -45,6 +46,7 @@
       gap: 6px;
       align-items: center;
       margin: 0;
+      padding-bottom: 1em;
       color: colors.$primary;
       font-weight: 500;
       font-size: 1.25em;
@@ -60,7 +62,7 @@
 
       &-icon {
         position: absolute;
-        top: 1px;
+        top: 0;
         left: 0;
         width: 16px;
         height: 16px;
@@ -69,6 +71,7 @@
         @media screen and (min-width: 1600px) {
           width: 20px;
           height: 20px;
+          top: -2px;
         }
 
         svg {
@@ -89,6 +92,19 @@
     &__title-wrapper {
       display: flex;
       align-items: normal;
+    }
+
+    .stats__counter {
+      color: colors.$primary;
+      font-weight: 500;
+
+      &_main {
+        font-size: 26px;
+      }
+
+      &_secondary {
+        font-size: 15px;
+      }
     }
   }
 }
