--- a/src/elements/ProjectsMonitoringCounters/projectsMonitoringCounters.scss
+++ b/src/elements/ProjectsMonitoringCounters/projectsMonitoringCounters.scss
@@ -55,41 +55,47 @@
         font-size: 12px;
       }
 
-      &__counter {
-        font-size: 1.15em;
-        font-weight: 500;
-      }
-
       &-card__row {
         flex: unset;
         margin-bottom: 0;
         font-weight: 400;
-        font-size: 12px;
-
-        & > * {
-          position: relative;
-          display: flex;
-          justify-content: space-between;
-          width: 100%;
-          padding-bottom: 0.5rem;
-          color: colors.$primary;
-        }
       }
 
       &-large {
         min-height: 34px;
       }
 
-      &__counter_header {
-        font-weight: 600;
-        font-size: 26px;
-      }
-
       &__details {
-        margin-top: 0.5em;
+        margin-top: 1rem;
 
-        & > * {
-          margin-bottom: 0.5em;
+        .stats-card__row {
+          margin-bottom: 0.5rem;
+
+          .stats__line {
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            padding-bottom: 0.5rem;
+          }
+
+          &:not(:last-child) {
+            .stats__line {
+              &::after {
+                position: absolute;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                height: 1px;
+                background-color: colors.$mulledWineThree;
+                content: '';
+              }
+            }
+          }
+        }
+
+        .stats__counter_main {
+          padding-bottom: 0;
         }
 
         @media (max-width: 1250px) {
@@ -126,18 +132,6 @@
         }
       }
 
-      &__line {
-        &::after {
-          position: absolute;
-          right: 0;
-          bottom: 0;
-          left: 0;
-          height: 1px;
-          background-color: colors.$mulledWineThree;
-          content: '';
-        }
-      }
-
       &__status {
         i[class^='state-'] {
           margin-left: 5px;
@@ -171,10 +165,6 @@
         }
       }
 
-      @media (max-width: 1250px) {
-        display: none;
-      }
-
       .stats__subtitle {
         font-size: inherit;
       }
@@ -192,11 +182,20 @@
 
 .monitoring-stats.application-card {
   .stats {
-    &__counter_header {
+    &__counter_total {
       display: none;
 
       @media (max-width: 1250px) {
         display: flex;
+      }
+    }
+
+    &__details {
+      margin: 0;
+      display: none;
+
+      @media (min-width: 1250px) {
+        display: block;
       }
     }
 
@@ -206,11 +205,6 @@
       flex-direction: column;
       gap: 8px;
       align-items: center;
-    }
-
-    &__counter {
-      font-weight: 600;
-      font-size: 26px;
     }
 
     &__link {
@@ -286,6 +280,14 @@ main.unpinned {
         }
       }
 
+      .stats__counter_total {
+        display: none;
+
+        @media (max-width: 1100px) {
+          display: flex;
+        }
+      }
+
       .project-card__info {
         @media (max-width: 1250px) {
           display: flex;
@@ -293,16 +295,6 @@ main.unpinned {
 
         @media (max-width: 1100px) {
           display: none;
-        }
-      }
-
-      &.application-card {
-        .stats__counter_header {
-          display: none;
-
-          @media (max-width: 1100px) {
-            display: flex;
-          }
         }
       }
     }
