Fix [LLM prompts] Make search and tabs row static

--- a/src/components/Details/DetailsPromptTemplate/detailsPromptTemplate.scss
+++ b/src/components/Details/DetailsPromptTemplate/detailsPromptTemplate.scss
@@ -5,14 +5,18 @@
   .prompt-tab {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 
     &__header {
+      position: sticky;
+      top: 0;
+      left: 0;
+      z-index: 6;
       display: flex;
       align-items: center;
       width: 100%;
-      margin-top: 20px;
+      padding-top: 20px;
       padding-bottom: 10px;
       background-color: white;
     }
@@ -21,8 +25,8 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      margin-top: 8px;
       min-height: 300px;
+      margin-top: 8px;
 
       &-header {
         font-weight: bold;
@@ -60,9 +64,9 @@
       justify-content: space-between;
       width: 135px;
       padding: 11px 18px;
+      font-size: 14px;
       border: borders.$primaryBorder;
       border-radius: 4px;
-      font-size: 14px;
       cursor: pointer;
 
       &-wrapper {
@@ -97,8 +101,8 @@
 
       &-key {
         width: 150px;
-        font-weight: bold;
         padding-right: 10px;
+        font-weight: bold;
       }
 
       &-value {
