--- a/src/common/ExpandableText/expandableText.scss
+++ b/src/common/ExpandableText/expandableText.scss
@@ -42,8 +42,7 @@
 .see-less-button {
   background: none;
   border: none;
-  color: colors.$cornflowerBlueTwo;
-  font-weight: 500;
+  color: colors.$cornflowerBlue;
   font-size: 14px;
   cursor: pointer;
   padding: 0;
