Fix [Monitoring app] Preselected metrics issues

--- a/src/components/DetailsMetrics/DetailsMetrics.scss
+++ b/src/components/DetailsMetrics/DetailsMetrics.scss
@@ -10,6 +10,7 @@ $stickyHeaderHeight: 55px;
     z-index: 2;
     display: flex;
     justify-content: space-between;
+    background-color: colors.$white;
 
     &__custom-filters {
       display: flex;
