--- a/src/components/ArtifactsPreview/artifactsPreview.scss
+++ b/src/components/ArtifactsPreview/artifactsPreview.scss
@@ -20,7 +20,7 @@
       &-title {
         display: flex;
         align-items: center;
-        margin: 0 0 15px 0;
+        margin: 0 0 15px;
         color: colors.$topaz;
         font-weight: 500;
         font-size: 20px;
