--- a/src/components/DetailsStatistics/detailsStatistics.scss
+++ b/src/components/DetailsStatistics/detailsStatistics.scss
@@ -21,7 +21,7 @@ $detailsStatisticsHeaderRowHeight: 49px;
 
     &-wrapper {
       width: 100%;
-      padding: 0 0 20px 0;
+      padding: 0 0 20px;
     }
 
     &-header {
