--- a/src/elements/AlertsTableRow/AlertsTableRow.scss
+++ b/src/elements/AlertsTableRow/AlertsTableRow.scss
@@ -73,7 +73,7 @@
   flex-direction: row;
   gap: 10px;
   align-items: center;
-  margin: 12px 0 12px 0;
+  margin: 12px 0;
   padding-right: 12px;
 
   &:not(:last-child) {
