--- a/src/elements/EnvironmentVariables/enviromnetVariables.scss
+++ b/src/elements/EnvironmentVariables/enviromnetVariables.scss
@@ -48,7 +48,7 @@
 
     &__row {
       .active-input {
-        padding: 25px 16px 11px 16px;
+        padding: 25px 16px 11px;
       }
 
       .table-cell {
