--- a/src/elements/FunctionsPanelCode/functionsPanelCode.scss
+++ b/src/elements/FunctionsPanelCode/functionsPanelCode.scss
@@ -55,7 +55,7 @@
       width: 200px;
 
       div:not(:last-child) {
-        margin: 10px 0 43px 0;
+        margin: 10px 0 43px;
       }
     }
   }
