--- a/src/elements/MethodDescription/methodDescription.scss
+++ b/src/elements/MethodDescription/methodDescription.scss
@@ -23,7 +23,7 @@
       align-items: center;
       height: 17px;
       margin-left: 5px;
-      padding: 0 5px 12px 5px;
+      padding: 0 5px 12px;
       color: colors.$topaz;
       font-weight: bold;
       font-size: 20px;
