--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -87,7 +87,7 @@ main {
     .page-actions {
       display: flex;
       justify-content: flex-end;
-      margin: 0 0 20px 0;
+      margin: 0 0 20px;
 
       .search-container {
         flex: unset;
