--- a/src/components/DetailsMetrics/DetailsMetrics.scss
+++ b/src/components/DetailsMetrics/DetailsMetrics.scss
@@ -21,7 +21,7 @@ $stickyHeaderHeight: 55px;
       background-color: colors.$white;
 
       > * {
-        margin: 0 0 15px 0;
+        margin: 0 0 15px;
       }
 
       .details-date-picker {
