--- a/src/components/Project/ProjectOverview/ProjectOverview.scss
+++ b/src/components/Project/ProjectOverview/ProjectOverview.scss
@@ -39,6 +39,7 @@
     &-card {
       flex: 0 0 100%;
       min-width: 350px;
+
       // min-height: 635px;
       margin: 0 15px 2em;
       transform: translateY(-60px);
@@ -51,7 +52,6 @@
       &__top {
         position: relative;
         display: flex;
-
         flex-flow: column;
       }
 
@@ -65,16 +65,16 @@
 
       &__bottom {
         display: flex;
-        flex-flow: column nowrap;
         flex: 1;
+        flex-flow: column nowrap;
         justify-content: space-between;
-        text-align: center;
         min-height: 66px;
+        text-align: center;
 
         .label {
-          font-size: 1.2em;
-          margin: 0 0 10px 0;
+          margin: 0 0 10px;
           padding: 0;
+          font-size: 1.2em;
         }
       }
 
@@ -94,8 +94,8 @@
         & > * {
           display: inline-flex;
           align-items: flex-end;
-          font-size: 14px;
           padding: 5px 10px;
+          font-size: 14px;
           text-transform: capitalize;
           cursor: pointer;
 
@@ -106,8 +106,8 @@
       }
 
       &__actions {
-        padding: 0 1.6em;
         min-height: 270px;
+        padding: 0 1.6em;
       }
     }
   }
@@ -122,7 +122,7 @@
   background-color: colors.$white;
   border: 1px solid colors.$mercury;
   border-radius: 12px;
-  box-shadow: 7px 8px 25px rgba(0, 0, 0, 0.04);
+  box-shadow: 7px 8px 25px rgb(0 0 0 / 4%);
 
   &__top {
     background-color: colors.$zircon;
@@ -149,8 +149,8 @@
 
     &-subtitle {
       margin: 0;
-      font-size: 1em;
       font-weight: 300;
+      font-size: 1em;
       line-height: 1.3;
 
       @media screen and (min-width: 1600px) {
