--- a/src/elements/PageHeader/pageHeader.scss
+++ b/src/elements/PageHeader/pageHeader.scss
@@ -26,11 +26,12 @@
     .tooltip-wrapper {
       display: flex;
       align-items: center;
-      margin-left: 10px;
+      margin-left: 5px;
+      margin-top: -10px;
 
       svg {
-        width: 20px;
-        height: 20px;
+        width: 16px;
+        height: 16px;
 
         path {
           fill: variables.$secondaryTextColor;
