--- a/src/components/AddToFeatureVectorPage/addToFeatureVector.scss
+++ b/src/components/AddToFeatureVectorPage/addToFeatureVector.scss
@@ -1,15 +1,10 @@
 .add-to-feature-vector {
   .content {
-    .content__header {
-      padding-left: 0;
-    }
-
     .content__action-bar-wrapper {
-      padding: 0;
-
-      .action-bar {
-        margin-bottom: 0;
-      }
+      min-height: 70px;
+      padding: 14px 0;
+      background-color: #fff;
+      box-shadow: inset 0 -1px 0 #edecef;
     }
   }
 }
