--- a/src/components/AddToFeatureVectorPage/addToFeatureVector.scss
+++ b/src/components/AddToFeatureVectorPage/addToFeatureVector.scss
@@ -5,6 +5,10 @@
       padding: 14px 0;
       background-color: #fff;
       box-shadow: inset 0 -1px 0 #edecef;
+
+      .action-bar {
+        margin-bottom: 0;
+      }
     }
   }
 }
