--- a/src/elements/AlertsTable/alertsTable.scss
+++ b/src/elements/AlertsTable/alertsTable.scss
@@ -4,6 +4,15 @@
   &__wrapper {
     display: flex;
     height: 100%;
+
+    .table__flex {
+      width: 100%;
+      min-width: 800px;
+    }
+
+    .table__content {
+      width: 100%;
+    }
   }
 
   &__content-info {
