Fix [Feature store] make "transformation" graph static

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -315,7 +315,7 @@ main {
     flex-direction: column;
     width: 25%;
     min-width: 350px;
-    overflow: hidden;
+    overflow-y: auto;
     background: colors.$white;
     border: borders.$secondaryBorder;
     box-shadow: 0 0 30px rgba(colors.$black, 0.15);
