[UI] optimize no-data-metric-icon image

--- a/src/components/DetailsMetrics/DetailsMetrics.scss
+++ b/src/components/DetailsMetrics/DetailsMetrics.scss
@@ -408,6 +408,10 @@ $stickyHeaderHeight: 55px;
       align-items: center;
       justify-content: center;
       width: 100%;
+
+      img {
+        width: 41px;
+      }
     }
 
     &__empty-select {
