--- a/src/common/Download/downloadContainer.scss
+++ b/src/common/Download/downloadContainer.scss
@@ -1,21 +1,25 @@
 @use 'igz-controls/scss/colors';
 @use 'igz-controls/scss/shadows';
 
+.tooltip.download-item__filename-tooltip {
+  z-index: 10;
+}
+
 .download-container {
   position: relative;
-  z-index: 9;
+  z-index: 10;
   align-self: flex-end;
-  opacity: 0;
   width: 220px;
   min-height: 90px;
   max-height: 200px;
+  margin-right: 24px;
+  margin-bottom: 10px;
   padding: 15px;
   color: colors.$white;
   background-color: colors.$darkPurple;
   border-radius: 5px;
   box-shadow: shadows.$tooltipShadow;
-  margin-right: 24px;
-  margin-bottom: 10px;
+  opacity: 0;
 
   &__header {
     margin-bottom: 15px;
