rename class name according to comment

--- a/src/common/StatsCard/statsCard.scss
+++ b/src/common/StatsCard/statsCard.scss
@@ -98,11 +98,11 @@
       color: colors.$primary;
       font-weight: 500;
 
-      &_main {
+      &-main {
         font-size: 26px;
       }
 
-      &_secondary {
+      &-secondary {
         font-size: 15px;
       }
     }
