--- a/src/elements/ProjectsMonitoringCounters/projectsMonitoringCounters.scss
+++ b/src/elements/ProjectsMonitoringCounters/projectsMonitoringCounters.scss
@@ -94,7 +94,7 @@
           }
         }
 
-        .stats__counter_main {
+        .stats__counter-main {
           padding-bottom: 0;
         }
 
