--- a/src/elements/ProjectsMonitoringCounters/projectsMonitoringCounters.scss
+++ b/src/elements/ProjectsMonitoringCounters/projectsMonitoringCounters.scss
@@ -76,7 +76,7 @@
             display: flex;
             justify-content: space-between;
             width: 100%;
-            padding-bottom: 0.5rem;
+            padding: 0.2rem 0 0.3rem;
           }
 
           &:not(:last-child) {
