--- a/src/elements/ProjectsMonitoringCounters/projectsMonitoringCounters.scss
+++ b/src/elements/ProjectsMonitoringCounters/projectsMonitoringCounters.scss
@@ -75,6 +75,7 @@
             position: relative;
             display: flex;
             justify-content: space-between;
+            align-items: center;
             width: 100%;
             padding-bottom: 0.5rem;
           }
