update dev deps that do not require node.js update

--- a/src/components/FunctionsPage/functions.scss
+++ b/src/components/FunctionsPage/functions.scss
@@ -1,5 +1,5 @@
 @use 'igz-controls/scss/variables';
-@use '/src/scss/mixins';
+@use '@/scss/mixins';
 
 $functionsRowHeight: variables.$rowHeight;
 $functionsHeaderRowHeight: variables.$headerRowHeight;
