--- a/src/components/Artifacts/artifacts.scss
+++ b/src/components/Artifacts/artifacts.scss
@@ -1,5 +1,5 @@
 @use 'igz-controls/scss/variables';
-@use '/src/scss/mixins';
+@use '@/scss/mixins';
 
 $artifactsRowHeight: variables.$rowHeight;
 $artifactsHeaderRowHeight: variables.$headerRowHeight;
