--- a/src/components/FeatureStore/FeatureSets/featureSets.scss
+++ b/src/components/FeatureStore/FeatureSets/featureSets.scss
@@ -1,5 +1,5 @@
 @use 'igz-controls/scss/variables';
-@use '/src/scss/mixins';
+@use '@/scss/mixins';
 
 $featureSetsRowHeight: variables.$rowHeight;
 $featureSetsHeaderRowHeight: variables.$headerRowHeight;
