--- a/src/components/FeatureStore/FeatureVectors/featureVectors.scss
+++ b/src/components/FeatureStore/FeatureVectors/featureVectors.scss
@@ -1,5 +1,5 @@
 @use 'igz-controls/scss/variables';
-@use '/src/scss/mixins';
+@use '@/scss/mixins';
 
 $featureVectorsRowHeight: variables.$rowHeight;
 $featureVectorsHeaderRowHeight: variables.$headerRowHeight;
