--- a/src/components/FeatureStore/Features/features.scss
+++ b/src/components/FeatureStore/Features/features.scss
@@ -1,5 +1,5 @@
 @use 'igz-controls/scss/variables';
-@use '/src/scss/mixins';
+@use '@/scss/mixins';
 
 $featuresRowHeight: variables.$rowHeightSmall;
 $featuresHeaderRowHeight: variables.$headerRowHeight;
