--- a/src/components/ModelsPage/ModelEndpoints/modelEndpoints.scss
+++ b/src/components/ModelsPage/ModelEndpoints/modelEndpoints.scss
@@ -1,5 +1,5 @@
 @use 'igz-controls/scss/variables';
-@use '/src/scss/mixins';
+@use '@/scss/mixins';
 
 $modelEndpointsRowHeight: variables.$rowHeightSmall;
 $modelEndpointsHeaderRowHeight: variables.$headerRowHeight;
