--- a/src/components/ModelsPage/RealTimePipelines/realTimePipelines.scss
+++ b/src/components/ModelsPage/RealTimePipelines/realTimePipelines.scss
@@ -1,5 +1,5 @@
 @use 'igz-controls/scss/variables';
-@use '/src/scss/mixins';
+@use '@/scss/mixins';
 
 $pipelinesRowHeight: variables.$rowHeight;
 $pipelinesHeaderRowHeight: variables.$headerRowHeight;
