--- a/src/elements/ScheduledJobsTable/scheduledJobsTable.scss
+++ b/src/elements/ScheduledJobsTable/scheduledJobsTable.scss
@@ -1,5 +1,5 @@
 @use 'igz-controls/scss/variables';
-@use '/src/scss/mixins';
+@use '@/scss/mixins';
 
 $scheduledJobsRowHeight: variables.$rowHeightSmall;
 $scheduledJobsHeaderRowHeight: variables.$headerRowHeight;
