--- a/src/common/Download/downloadContainer.scss
+++ b/src/common/Download/downloadContainer.scss
@@ -29,7 +29,8 @@
     display: flex;
     flex-direction: column;
     max-height: 140px;
-    overflow-y: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     .download-item {
       display: flex;
