--- a/src/components/ProjectSettings/projectSettings.scss
+++ b/src/components/ProjectSettings/projectSettings.scss
@@ -4,12 +4,11 @@
 @use 'igz-controls/scss/variables';
 
 .settings-content {
-  padding: 15px 24px 10px;
-
   .settings__card {
     width: 100%;
-    padding: 24px 0;
+    padding: 0 26px 24px 0;
     background-color: colors.$white;
+    overflow-y: auto;
 
     &-content {
       display: flex;
