Impl [Real-time pipelines] Add model runner step

--- a/src/common/ReactFlow/mlReactFlow.scss
+++ b/src/common/ReactFlow/mlReactFlow.scss
@@ -20,7 +20,7 @@
 }
 
 @mixin primaryNode {
-  color: colors.$malibu;
+  color: colors.$primary;
   background-color: colors.$white;
   border-color: colors.$malibu;
   stroke: colors.$malibu;
