--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -311,16 +311,21 @@ main {
   }
 
   .graph-pane {
+    position: relative;
     display: flex;
-    flex-direction: column;
-    width: 25%;
-    min-width: 350px;
-    overflow-y: auto;
+    width: 30%;
+    min-width: 400px;
+    color: colors.$primary;
     background: colors.$white;
     border: borders.$secondaryBorder;
     box-shadow: 0 0 30px rgba(colors.$black, 0.15);
 
-    &.scrollable {
+    &-scroll-container {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
       overflow-y: auto;
     }
 
@@ -328,9 +333,24 @@ main {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 25px;
+      padding: 10px 25px;
+      border-bottom: borders.$secondaryBorder;
       font-weight: bold;
       font-size: 20px;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+      background-color: colors.$white;
+
+      &-icon {
+        margin-right: 8px;
+        display: flex;
+        align-items: center;
+      }
+
+      &-label {
+        margin-right: auto;
+      }
     }
   }
 }
